force-app/main/default/objects/ACBalBS__c/ACBalBS__c.object-meta.xml
<CustomObject>
    <label>A/C Bal+B/S</label>
    <nameField>
        <displayFormat>ACBS-{000000}</displayFormat>
        <label>A/C BAL+B/S ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A/C Bal+B/S</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>