force-app/main/default/objects/ACBalBS__c/fields/ACBalanceID__c.field-meta.xml
<CustomField>
    <fullName>ACBalanceID__c</fullName>
    <label>A/C BALANCE ID</label>
    <referenceTo>ACBalance__c</referenceTo>
    <relationshipLabel>A/C BAL+B/S</relationshipLabel>
    <relationshipName>ACBalanceID</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>