force-app/main/default/objects/ACBalBS__c/fields/AccountingCodeFormu__c.field-meta.xml
<CustomField>
    <fullName>AccountingCodeFormu__c</fullName>
    <formula>ACBalanceID__r.AccountingCode__r.Name</formula>
    <label>ACCOUNTING CODE-FORMU</label>
    <type>Text</type>
</CustomField>