force-app/main/default/objects/ACBalBS__c/fields/BalanceTypeBS__c.field-meta.xml
<CustomField>
    <fullName>BalanceTypeBS__c</fullName>
    <label>BALANCE TYPE-B/S</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BalanceType</valueSetName>
    </valueSet>
</CustomField>