force-app/main/default/objects/ACBalBS__c/fields/BSRollupStatus__c.field-meta.xml
<CustomField>
    <fullName>BSRollupStatus__c</fullName>
    <label>B/S ROLLUP STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>