force-app/main/default/objects/ACBalBS__c/fields/CloseBalBS__c.field-meta.xml
<CustomField>
    <fullName>CloseBalBS__c</fullName>
    <label>CLOSING BALANCE-B/S</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>