force-app/main/default/objects/ACBalBS__c/fields/CloseBalCreditFormu__c.field-meta.xml
<CustomField>
    <fullName>CloseBalCreditFormu__c</fullName>
    <formula>ACBalanceID__r.ClosingBalanceLocalCredit__c</formula>
    <label>CLOSING BALANCE-CREDIT-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>