force-app/main/default/objects/ACBalBS__c/fields/OpenBalBS__c.field-meta.xml
<CustomField>
    <fullName>OpenBalBS__c</fullName>
    <label>OPENING BALANCE-B/S</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>