force-app/main/default/objects/ACBalBS__c/fields/OpenBalCreditFormu__c.field-meta.xml
<CustomField>
    <fullName>OpenBalCreditFormu__c</fullName>
    <formula>ACBalanceID__r.OpeningBalanceLocalCredit__c</formula>
    <label>OPENING BALANCE-CREDIT-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>