force-app/main/default/objects/ACBalBS__c/fields/TranBalCreditFormu__c.field-meta.xml
<CustomField>
    <fullName>TranBalCreditFormu__c</fullName>
    <formula>ACBalanceID__r.TransactionBalanceLocalCredit__c</formula>
    <label>TRANSACTION BALANCE-CREDIT-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>