force-app/main/default/objects/ACBalBS__c/fields/TranBalDebitFormu__c.field-meta.xml
<CustomField>
    <fullName>TranBalDebitFormu__c</fullName>
    <formula>ACBalanceID__r.TransactionBalanceLocalDebit__c</formula>
    <label>TRANSACTION BALANCE-DEBIT-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>